<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        tools:ignore="MissingConstraints"
        android:fitsSystemWindows="true"
        tools:context=".UpdateNoteFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/edit_note_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.appbar.MaterialToolbar
            app:title="@string/Edit_Note"
            app:navigationIconTint="@color/forest_green"
            android:id="@+id/edit_note_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:menu="@menu/edit_note_menu"/>

        <EditText

            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_note_toolbar"
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Title"
            android:padding="12dp"
            android:textSize="20sp"
            android:maxLines="1"
            />

        <EditText
            android:background="@null"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/editNoteTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/editNoteContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:hint="@string/Content"
            android:padding="12dp"
            android:textSize="18sp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:keyboardNavigationCluster="false"
            app:tint="@color/light_green"
            android:backgroundTint="@color/forest_green"
            android:src="@drawable/ic_save"
            android:contentDescription="editFab"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>